hk:add more description on benefit page

--- a/lovers-under-the-moon/benefit.html
+++ b/lovers-under-the-moon/benefit.html
@@ -27,7 +27,10 @@
 
         <div class="text_area center">
           <div>
-            <div class="divTableCell divTable_title">뷰잉데이</div>
+            <div class="divTableCell divTable_title">
+              뷰잉데이
+              <span class="text_caption">2023년 2분기 예정</span>
+            </div>
             <div class="divTableCell divTable_contents">오프라인 이벤트 초대권(1회 제공)</div>
           </div>
 
@@ -53,7 +56,11 @@
           </div>
 
           <div>
-            <div class="divTableCell divTable_title">멤버십NFT</div>
+            <div class="divTableCell divTable_title">
+              멤버십NFT
+              <span class="text_caption">4월 11일(임시정부수립일)</span>
+              <span class="text_caption">에어드롭 예정</span>
+            </div>
             <div class="divTableCell divTable_contents">
               <ul>
                 <li>∙ 간송 전용 커뮤니케이션 참여</li>
@@ -65,7 +72,9 @@
               </ul>
             </div>
           </div>
-
+        </div>
+        <div class="caption_area center">
+          <span class="text_caption">*혜택지급은 지급 시 NFT소유자 기준</span>
         </div>
       </section>
     </div>
