--- a/index.html
+++ b/index.html
@@ -89,6 +89,23 @@
     <!-- 어두운 곳에서는 on 삭제, 밝은 곳에서는 on 생성-->
     <aside id="sidebar" class="sidebar"></aside>
 
+    <div id="popup">
+      <div>
+       <img src="img/popup-bg.png" alt="background">
+      </div>
+      <div class="popup_button_first">
+        <a href="/lovers-under-the-moon" target="_self">
+          <img src="img/detail-btn.png" alt="detail-button" />
+        </a>
+      </div>
+      <div class="popup_button_second">
+        <a href="https://launchpad.pala.io/#/lovers-under-the-moon" target="_self">
+          <img src="img/purchase-btn.png" alt="purchase-button" />
+        </a>
+      </div>
+      <div class="popup_close"><div>&#215;</div></div>
+    </div>
+
     <header id="header">
       <div id="header-inner"></div>
 
