--- a/lovers-under-the-moon/index.html
+++ b/lovers-under-the-moon/index.html
@@ -60,10 +60,22 @@
           $("#footer").load("./page/footer.html");
         });
       </script>
-    
+    <script type="text/javascript" src="./js/popup.js"></script>
 </head>
 <body>
     <header id="header" class="white"></header>
+
+    <div id="popup">
+      <div>
+       <img src="img/popup-bg.png" alt="background">
+      </div>
+      <div class="popup_button_first">
+        <a href="https://launchpad.pala.io/#/lovers-under-the-moon" target="_self">
+          <img src="img/purchase-btn.png" alt="purchase-button" />
+        </a>
+      </div>
+      <div class="popup_close"><div>&#215;</div></div>
+    </div>
 
     <div class="main">
       <section>
