--- a/index_ko.html
+++ b/index_ko.html
@@ -465,38 +465,38 @@
 
       <div class="imgarea grid">
         <div id="thesandbox">
-          <h3 data-scroll="toggle(.fromTopIn, .fromTopOut)">메타버스 진화</h3>
+          <h3 data-scroll="toggle(.fromTopIn, .fromTopOut)">The SANDBOX</h3>
 
           <p class="expansion-banner" data-scroll="toggle(.fromBottomIn, .fromBottomOut)">
             <img src="img\expansion-banner-thesandbox_new.jpg" alt="" />
           </p>
+          <p class="expansion-banner" data-scroll="toggle(.fromBottomIn, .fromBottomOut)">
+            <img src="img\treasure_guardians.gif" alt="" />
+          </p>
           <div class="Expansion-img thesandbox-img">
-            <div class="Expansion-img-1 thesandbox-img-1" data-scroll="toggle(.scaleDownIn, .scaleDownOut)">
-              <div>
-                <video autoplay loop muted>
-                  <source src="https://kansong-image-collection.s3.ap-northeast-2.amazonaws.com/img/Danopungjeong.mp4"
-                    type="video/mp4" />
-                </video>
-              </div>
-              <img src="img\yb017002006.jpg" alt="" />
+            <div class="Expansion-img-1 thesandbox-img-1">
+              <img src="img\sandbox_1.jpg" alt="thesandbox_1" />
+
             </div>
 
-            <div class="Expansion-img-2 thesandbox-img-2" data-scroll="toggle(.scaleDownIn, .scaleDownOut)">
+            <div class="Expansion-img-2 thesandbox-img-2">
               <div>
-                <div>
-                  <video autoplay loop muted>
-                    <source src="https://kansong-image-collection.s3.ap-northeast-2.amazonaws.com/img/Dongja-seung.mkv"
-                      type="video/mp4" />
-                  </video>
-                </div>
+                <img src="img\sandbox_2.jpg" alt="thesandbox_2" />
+
               </div>
-              <img src="img\yb017002004.jpg" alt="" />
+            </div>
+
+            <div class="Expansion-img-3 thesandbox-img-3">
+              <div>
+                <img src="img\sandbox_3.png" alt="thesandbox_3" />
+
+              </div>
             </div>
           </div>
         </div>
 
         <div id="Homage">
-          <h3 data-scroll="toggle(.fromTopIn, .fromTopOut)">오마주</h3>
+          <h3 data-scroll="toggle(.fromTopIn, .fromTopOut)">Homage to Hyewon</h3>
 
           <div class="Expansion-img">
             <div class="partner_hth Expansion-img-1" data-scroll="toggle(.scaleDownIn, .scaleDownOut)">
