partners css + add links

--- a/index.html
+++ b/index.html
@@ -467,35 +467,39 @@
 
       <div class="imgarea grid">
         <div id="thesandbox">
-          <h3 data-scroll="toggle(.fromTopIn, .fromTopOut)">The SANDBOX</h3>
+          <a href="https://www.sandbox.game/kr/experiences/treasure-guardians-finding-korean-treasure/a91a40e5-f420-4a62-baea-5d6e6dbb4200/page/"
+            target="_blank">
+            <h3 data-scroll="toggle(.fromTopIn, .fromTopOut)">The SANDBOX</h3>
+          </a>
+          <a href="https://www.sandbox.game/kr/experiences/treasure-guardians-finding-korean-treasure/a91a40e5-f420-4a62-baea-5d6e6dbb4200/page/"
+            target="_blank">
+            <p class="expansion-banner" data-scroll="toggle(.fromBottomIn, .fromBottomOut)">
+              <img src="img\expansion-banner-thesandbox_new.jpg" alt="" />
+            </p>
+            <p class="expansion-banner" data-scroll="toggle(.fromBottomIn, .fromBottomOut)">
+              <img src="img\treasure_guardians.gif" alt="" />
+            </p>
+            <div class="Expansion-img thesandbox-img">
+              <div class="Expansion-img-1 thesandbox-img-1">
+                <img src="img\sandbox_1.jpg" alt="thesandbox_1" />
+              </div>
 
-          <p class="expansion-banner" data-scroll="toggle(.fromBottomIn, .fromBottomOut)">
-            <img src="img\expansion-banner-thesandbox_new.jpg" alt="" />
-          </p>
-          <p class="expansion-banner" data-scroll="toggle(.fromBottomIn, .fromBottomOut)">
-            <img src="img\treasure_guardians.gif" alt="" />
-          </p>
-          <div class="Expansion-img thesandbox-img">
-            <div class="Expansion-img-1 thesandbox-img-1">
-              <img src="img\sandbox_1.jpg" alt="thesandbox_1" />
+              <div class="Expansion-img-2 thesandbox-img-2">
+                <div>
+                  <img src="img\sandbox_2.jpg" alt="thesandbox_2" />
+                </div>
+              </div>
 
-            </div>
-
-            <div class="Expansion-img-2 thesandbox-img-2">
-              <div>
-                <img src="img\sandbox_2.jpg" alt="thesandbox_2" />
-
+              <div class="Expansion-img-3 thesandbox-img-3">
+                <div>
+                  <img src="img\sandbox_3.png" alt="thesandbox_3" />
+                </div>
               </div>
             </div>
+          </a>
 
-            <div class="Expansion-img-3 thesandbox-img-3">
-              <div>
-                <img src="img\sandbox_3.png" alt="thesandbox_3" />
-
-              </div>
-            </div>
-          </div>
         </div>
+
 
         <div id="Homage">
           <h3 data-scroll="toggle(.fromTopIn, .fromTopOut)">Homage to Hyewon</h3>
@@ -699,31 +703,34 @@
 
         <div class="imgarea m-col-6">
           <ul class="">
-            <li id="Partner-sk" data-scroll="toggle(.fromBottomIn, .fromBottomOut)" class="delay-3">
+            <li class="firstRow" id="Partner-sk" data-scroll="toggle(.fromBottomIn, .fromBottomOut)" class="delay-3">
               <div class="Partner-logo">
                 <img src="./img/partner/logo_sk.png" alt="" />
               </div>
             </li>
 
-            <li id="Partner-sandbox" data-scroll="toggle(.fromBottomIn, .fromBottomOut)" class="delay-3">
+            <li class="firstRow" id="Partner-sandbox" data-scroll="toggle(.fromBottomIn, .fromBottomOut)"
+              class="delay-3">
               <div class="Partner-logo">
                 <img src="./img/partner/logo_sandbox.png" alt="" />
               </div>
             </li>
 
-            <li id="Partner-ifland" data-scroll="toggle(.fromBottomIn, .fromBottomOut)" class="delay-3">
+            <li class="firstRow" id="Partner-ifland" data-scroll="toggle(.fromBottomIn, .fromBottomOut)"
+              class="delay-3">
               <div class="Partner-logo">
                 <img src="./img/partner/logo_ifland.png" alt="" />
               </div>
             </li>
 
-            <li id="Partner-facbros" data-scroll="toggle(.fromBottomIn, .fromBottomOut)" class="delay-3">
+            <li class="firstRow" id="Partner-facbros" data-scroll="toggle(.fromBottomIn, .fromBottomOut)"
+              class="delay-3">
               <div class="Partner-logo">
                 <img src="./img/partner/logo_facbros.png" alt="" />
               </div>
             </li>
 
-            <li id="Partner-dcent" data-scroll="toggle(.fromBottomIn, .fromBottomOut)">
+            <li class="firstRow" id="Partner-dcent" data-scroll="toggle(.fromBottomIn, .fromBottomOut)">
               <div class="Partner-logo">
                 <img src="./img/partner/logo_dcent.png" alt="" />
               </div>
