partners update on Ko

--- a/index_ko.html
+++ b/index_ko.html
@@ -688,19 +688,39 @@
     <div class="Container">
       <div class="grid">
         <div class="textarea col-12 m-col-6">
-          <h2 data-scroll="toggle(.fromTopIn, .fromTopOut)">파트너
-          </h2>
+          <h2 data-scroll="toggle(.fromTopIn, .fromTopOut)">Partner</h2>
         </div>
 
         <div class="imgarea m-col-6">
           <ul class="">
-            <li id="Partner-facbros" data-scroll="toggle(.fromBottomIn, .fromBottomOut)" class="delay-3">
+            <li class="firstRow" id="Partner-sk" data-scroll="toggle(.fromBottomIn, .fromBottomOut)" class="delay-3">
+              <div class="Partner-logo">
+                <img src="./img/partner/logo_sk.png" alt="" />
+              </div>
+            </li>
+
+            <li class="firstRow" id="Partner-sandbox" data-scroll="toggle(.fromBottomIn, .fromBottomOut)"
+              class="delay-3">
+              <div class="Partner-logo">
+                <img src="./img/partner/logo_sandbox.png" alt="" />
+              </div>
+            </li>
+
+            <li class="firstRow" id="Partner-ifland" data-scroll="toggle(.fromBottomIn, .fromBottomOut)"
+              class="delay-3">
+              <div class="Partner-logo">
+                <img src="./img/partner/logo_ifland.png" alt="" />
+              </div>
+            </li>
+
+            <li class="firstRow" id="Partner-facbros" data-scroll="toggle(.fromBottomIn, .fromBottomOut)"
+              class="delay-3">
               <div class="Partner-logo">
                 <img src="./img/partner/logo_facbros.png" alt="" />
               </div>
             </li>
 
-            <li id="Partner-dcent" data-scroll="toggle(.fromBottomIn, .fromBottomOut)">
+            <li class="firstRow" id="Partner-dcent" data-scroll="toggle(.fromBottomIn, .fromBottomOut)">
               <div class="Partner-logo">
                 <img src="./img/partner/logo_dcent.png" alt="" />
               </div>
