--- a/index.html
+++ b/index.html
@@ -497,7 +497,15 @@
               </div>
             </div>
           </a>
+        </div>
 
+        <div id="ifland">
+          <a href="https://interverse.link/kr/kansong.html" target="_blank">
+            <h3 data-scroll="toggle(.fromTopIn, .fromTopOut)">Ifland</h3>
+            <p class="expansion-banner" data-scroll="toggle(.fromBottomIn, .fromBottomOut)">
+              <img src="img\ifland.gif" alt="ifland" />
+            </p>
+          </a>
         </div>
 
 
