--- a/index_ko.html
+++ b/index_ko.html
@@ -494,8 +494,17 @@
                 </div>
               </div>
             </div>
+          </a>
         </div>
-        </a>
+
+        <div id="ifland">
+          <a href="https://interverse.link/kr/kansong.html" target="_blank">
+            <h3 data-scroll="toggle(.fromTopIn, .fromTopOut)">Ifland</h3>
+            <p class="expansion-banner" data-scroll="toggle(.fromBottomIn, .fromBottomOut)">
+              <img src="img\ifland.gif" alt="ifland" />
+            </p>
+          </a>
+        </div>
 
         <div id="Homage">
           <h3 data-scroll="toggle(.fromTopIn, .fromTopOut)">Homage to Hyewon</h3>
